<resources>
    <string name="app_name">HWMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Hardware Mega Search</string>
    <string name="menu_searchhistory">History</string>

    <string name="menu_searchwiz_results">Search Results</string>
    <string name="menu_searchwiz_results_table_heading_name">Item Name</string>
    <string name="menu_searchwiz_results_table_heading_price">Item Price</string>
    <string name="menu_searchwiz_results_table_heading_link">Link to Item</string>

    <string name="searchwiz_home">Search Wizard</string>
    <string name="start">Start</string>
    <string name="new_search">New Search</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_searchwiz_home">
        Welcome to the Search Generation Wizard
        \n\nThe following pages will guide you through creating a search for the item that you are
        looking for.
        \n\nAt the end of the Wizard you will be presented with a choice about whether you want a
        prediction or not.  This prediction will take longer than the initial response to calculate
        so please do not leave the app before the prediction has finished loading if you opted for
        a prediction.

        \nArg: %1$s
    </string>
    <string name="hello_searchwiz_component">Please select a component from the list.\nArg: %1$s</string>
    <string name="hello_searchwiz_cpu_manufacturer">Please select a CPU manufacturer from the list.\nArg: %1$s</string>
    <string name="hello_searchwiz_cpu_intel_tier">Please select an Intel tier from the list.\nArg: %1$s</string>
    <string name="hello_searchwiz_cpu_intel_generation">Please select an Intel generation from the list.\nArg: %1$s</string>

    <!-- Hardware Components -->
    <string name="label_cpu">CPU</string>
    <string name="label_gpu">GPU</string>
    <string name="label_motherboard">Motherboard</string>
    <string name="label_memory">Memory/RAM</string>
    <string name="label_storage">Storage</string>
    <string name="label_psu">Power Supply</string>
    <string name="label_case">Case</string>
</resources>