<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.k00221230.fyp.hwms.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_searchwiz_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_searchwiz_home"
        android:name="com.k00221230.fyp.hwms.ui.searchwizard.SearchWizHomeFragment"
        android:label="@string/searchwiz_home"
        tools:layout="@layout/fragment_searchwiz_home">
<!--        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" /> -->
        <action
            android:id="@+id/action_SearchWizHomeFragment_to_SearchWizComponentSelectFragment"
            app:destination="@id/nav_searchwiz_componentselect" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_searchwiz_componentselect"
        android:name="com.k00221230.fyp.hwms.ui.searchwizard.SearchWizComponentSelectFragment"
        android:label="@string/searchwiz_home"
        tools:layout="@layout/fragment_searchwiz_componentselect">
        <action
            android:id="@+id/action_SearchWizComponentSelectFragment_to_SearchWizHomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_searchwiz_componentselect_cpu"
        android:name="com.k00221230.fyp.hwms.ui.searchwizard.cpu.SearchWizComponentSelectCpuFragment"
        android:label="@string/searchwiz_home"
        tools:layout="@layout/fragment_searchwiz_componentselect_cpu">
        <action
            android:id="@+id/action_SearchWizComponentSelectFragment_to_SearchWizHomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_searchhistory"
        android:name="com.k00221230.fyp.hwms.ui.searchhistory.SearchHistoryFragment"
        android:label="@string/menu_searchhistory"
        tools:layout="@layout/fragment_searchhistory" />
</navigation>