<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.searchhistory.SearchHistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_searchwiz_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/menu_searchwiz_results"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/searchwiz_awaitingResults_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/searchwiz_awaitingResults_spinner"
            style="?android:attr/spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:indeterminate="false"
            app:layout_constraintBottom_toTopOf="@id/searchwiz_results_scrollview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/searchwiz_results_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/searchwiz_results_tablelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/searchwiz_results_tablelayout_titlerow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/searchwiz_results_titlerow_itemname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_searchwiz_results_table_heading_name"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/searchwiz_results_titlerow_itemprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_searchwiz_results_table_heading_price"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        tools:layout_weight="1" />

                    <TextView
                        android:id="@+id/searchwiz_results_titlerow_itemlink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_searchwiz_results_table_heading_link"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        tools:layout_weight="1" />

                </TableRow>

                <TableRow
                    android:id="@+id/searchwiz_results_tablelayout_datarow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TableRow>

            </TableLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>